--- a/scss/_search-engine-posts-list.scss
+++ b/scss/_search-engine-posts-list.scss
@@ -1,6 +1,6 @@
 .blog_layouts_search_engine_posts_list {
     padding: 0;
-    margin: 0 0 1em 0;
+    margin: 1em 0 1em 0;
     max-width: 80em;
 
     > .blog_layouts_searchresult {
